nohup.out
  File "fetchdata.py", line 5
    print '(%d) Reading page Feed ', %(time.strftime('%Y-%m-%d %H:%M'))
                                     ^
SyntaxError: invalid syntax
